# similari-example

./: Cargo.toml  README.md
examples/: tracker.rs
src/: main.rs
static/: index.html  index.js
