[package]
name = "similari-example"
version = "0.1.0"
edition = "2021"
description = "Example for similari object tracker test."
authors = ["Christian <chriamue@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chriamue/similari-example"

[dependencies]
image = { version = "0.23.1", default-features = false, features = [
    "png",
    "jpeg",
] }
imageproc = { version = "0.22.0", default-features = false }
nokhwa = { version = "0.9.4", features = ["input-v4l", "output-threaded"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similari = "0.22.9"
tokio = { version = "1.20", features = ["full"] }
